err/sumatra-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sumatra_server'...
Listing './lib/python3.5/site-packages/sumatra_server/fixtures'...
Compiling './lib/python3.5/site-packages/sumatra_server/handlers.py'...
***   File "./lib/python3.5/site-packages/sumatra_server/handlers.py", line 115
    print "PUT -->", request.PUT
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sumatra_server/resource.py'...
***   File "./lib/python3.5/site-packages/sumatra_server/resource.py", line 8
    print "AVAILABLE:", available_emitters
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sumatra_server/templates'...
Listing './lib/python3.5/site-packages/sumatra_server/templatetags'...
Compiling './lib/python3.5/site-packages/sumatra_server/tests.py'...
***   File "./lib/python3.5/site-packages/sumatra_server/tests.py", line 192
    print response.content
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sumatra_server/urls.py'...
***   File "./lib/python3.5/site-packages/sumatra_server/urls.py", line 14
    print "AUTH:", project_resource.authentication
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sumatra_server-0.2.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
